WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177733
[curl] Crashes in CurlRequest::setupPUT()
https://bugs.webkit.org/show_bug.cgi?id=177733
Summary
[curl] Crashes in CurlRequest::setupPUT()
Fujii Hironori
Reported
2017-10-01 23:48:57 PDT
[curl] Crashes in CurlRequest::setupPUT() MiniBrowser crashed while browsing CNN and Google News. I tested with trunk@222695, WinCairo port, Debug build, MiniBrowser. Callstack:
> WebKit.dll!WTF::Vector<WebCore::FormDataElement,0,WTF::CrashOnOverflow,16,WTF::FastMalloc>::size() Line 647 C++ > WebKit.dll!WebCore::CurlRequest::setupPUT(WebCore::ResourceRequest & request) Line 384 C++ > WebKit.dll!WebCore::CurlRequest::setupTransfer() Line 159 C++ > WebKit.dll!WebCore::CurlJobList::startJobs(WTF::HashSet<WebCore::CurlJobClient *,WTF::PtrHash<WebCore::CurlJobClient *>,WTF::HashTraits<WebCore::CurlJobClient *> > && jobs) Line 46 C++ > WebKit.dll!WebCore::CurlJobManager::updateJobList(WebCore::CurlJobList & jobs) Line 178 C++ > WebKit.dll!WebCore::CurlJobManager::workerThread() Line 197 C++ > WebKit.dll!WebCore::CurlJobManager::startThreadIfNeeded::__l10::<lambda>() Line 132 C++ > WebKit.dll!WTF::Function<void __cdecl(void)>::CallableWrapper<void <lambda>(void) >::call() Line 101 C++ > WTF.dll!WTF::Function<void __cdecl(void)>::operator()() Line 57 C++ > WTF.dll!WTF::Thread::entryPoint(WTF::Thread::NewThreadContext * newThreadContext) Line 130 C++ > WTF.dll!WTF::wtfThreadEntryPoint(void * data) Line 157 C++ > WTF.dll!thread_start<unsigned int (__cdecl*)(void * __ptr64)>(void * const parameter) Line 115 C++ > [External Code]
> auto numElements = request.httpBody()->elements().size();
request.httpBody() was null.
Attachments
Patch
(1.49 KB, patch)
2017-10-02 00:16 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(1.08 MB, application/zip)
2017-10-02 01:20 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-10-01 23:59:40 PDT
A variable 'method' was "OPTIONS" in CurlRequest::setupTransfer().
Fujii Hironori
Comment 2
2017-10-02 00:12:41 PDT
A test http/tests/xmlhttprequest/xmlhttprequest-open-method-allowed.html crashes.
Fujii Hironori
Comment 3
2017-10-02 00:16:22 PDT
Created
attachment 322356
[details]
Patch
Build Bot
Comment 4
2017-10-02 01:20:56 PDT
Comment on
attachment 322356
[details]
Patch
Attachment 322356
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/4721522
New failing tests: http/tests/security/window-properties-clear-domain.html
Build Bot
Comment 5
2017-10-02 01:20:57 PDT
Created
attachment 322362
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 6
2017-10-02 12:04:12 PDT
Comment on
attachment 322356
[details]
Patch Clearing flags on attachment: 322356 Committed
r222730
: <
http://trac.webkit.org/changeset/222730
>
WebKit Commit Bot
Comment 7
2017-10-02 12:04:14 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2017-10-02 12:04:56 PDT
<
rdar://problem/34772741
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug