[curl] Crashes in CurlRequest::setupPUT() https://bugs.webkit.org/show_bug.cgi?id=177733

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-10-02
Reviewed by Alex Christensen.

Tests: http/tests/xmlhttprequest/xmlhttprequest-open-method-allowed.html

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::setupPUT): Null-check the result of request.httpBody().

Canonical link: https://commits.webkit.org/194013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222730 268f45cc-cd09-0410-ab3c-d52691b4dbfc